--- a/week1/express-post-request/views/fruitPicker.html
+++ b/week1/express-post-request/views/fruitPicker.html
@@ -13,6 +13,7 @@
         <input type="radio" name="fruit" value="{{fruit}}" /> {{fruit}}
     </p>
     {% endfor %}
+    <input type="submit" value="submit">
 </form>
 
 </body>
